/**
 * # Transaction
 * A (mostly legacy) wrapper around the bytes of a
 * serialized `SignedTransaction` message.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package proto;

/*
 * Copyright (C) 2018-2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.base">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";
import "transaction_body.proto";

/**
 * A wrapper around signed transaction bytes.<br/>
 * This was originally a transaction with body, signatures, and/or bytes,
 * but is not only a wrapper around a byte array containing signed transction
 * bytes.
 *
 * The `signedTransactionBytes` field is REQUIRED and MUST contain a valid,
 * serialized, `SignedTransaction` message.<br/>
 * All other fields are deprecated and MUST NOT be set.
 *
 * #### Additional Notes
 * The four deprecated fields will be removed and reserved in a future release.
 */
message Transaction {
    /**
     * Replaced with `signedTransactionBytes`.<br/>
     * The body of the transaction.
     */
    TransactionBody body = 1 [deprecated = true];

    /**
     * Replaced with `signedTransactionBytes`.<br/>
     * The signatures on the body.
     */
    SignatureList sigs = 2 [deprecated = true];

    /**
     * Replaced with `signedTransactionBytes`.<br/>
     * The signatures on the body with a newer format.
     */
    SignatureMap sigMap = 3 [deprecated = true];

    /**
     * Replaced with `signedTransactionBytes`.<br/>
     * TransactionBody serialized into bytes.
     */
    bytes bodyBytes = 4 [deprecated = true];

    /**
     * A valid, serialized, `SignedTransaction` message.
     * <p>
     * This field MUST be present.
     * This field MUST NOT exceed the current network transaction size limit
     * (currently 6144 bytes).
     */
    bytes signedTransactionBytes = 5;
}
